# lwm

./: .gitignore  LICENSE  README.md  REUSE.toml  flake.nix  module.nix  package.nix  pyproject.toml
docs/: definition.md
src/lwm/: ReadMe.md  __init__.py  debug.py  fs.py  load.py  runtime_info.py
src/lwm/anchor/: __init__.py
src/lwm/builder/: bar.py  floating.py  group.py  input.py  keyboard.py  layout.py  match_registry.py  mouse.py  scratchpad.py  screen.py
src/lwm/config/: default.py  loader.py  typedef.py
src/lwm/context/: bar.py  module.py  validation.py
src/lwm/helper/: color.py  command.py  fs.py  key.py  match.py  merge.py  shellcmd.py  terminal.py
src/lwm/loader/: __init__.py  apps.py  bar.py  branding.py  controller.py  cursor.py  custom.py  device.py  extension.py  floating.py  font.py  group.py  input.py  key.py  layout.py  match.py  menu.py  model.py  notifier.py  output.py  typedef.py  widget.py
src/lwm/model/: bar.py  cursor.py  custom.py  definitions.py  extension.py  input.py  layout.py  menu.py  output.py  wallpaper.py  widget.py
src/lwm/qmodule/: base.py  bluetooth.py  cpu_temp_status.py  cpu_usage_status.py  current_layout.py  date_time.py  group_box.py  line_sep.py  memory_status.py  music_status.py  network_status.py  separator.py  spacer.py  system_menu.py  user_menu.py  volume_status.py  weather.py  wifi.py  window_name.py
src/lwm/qwidget/: icon.py  line_sep.py  mdi_codepoint.py  net_min.py
src/lwm/secret/: loader.py
src/lwm/widget/: icon.py  mdi_codepoint.py  net_min.py
src/lwm/widget_group/: base.py  bluetooth.py  cpu_temp_status.py  cpu_usage_status.py  current_layout.py  date_time.py  group_box.py  memory_status.py  music_status.py  network_status.py  separator.py  spacer.py  weather.py  (+5 more)
tests/: conftest.py  test_dunder.py
tests/anchor/: test_anchor.py  test_margin.py
tests/builder/: test_build_bars.py  test_build_floating.py  test_build_groups.py  test_build_keyboard.py  test_builder_bars.py  test_builder_floating.py  test_builder_groups.py  test_builder_input.py  test_builder_keyboard.py  test_builder_layout.py
tests/config/: test_config.py
tests/data/: settings_full.yaml
tests/definitions/: test_defs.py  test_defs_controller.py
tests/helper/: test_color.py  test_helper_key.py  test_helper_merge.py  test_merge.py
tests/loader/: test_floating_loader.py  test_loader_custom.py  test_loader_floating.py  test_loader_keyboard.py  test_loader_layout.py
tests/widget/: test_mdicon.py  test_widget_defaults.py
(+155 files in other folders)
