[project]
name = "lwm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Simon Kennedy", email = "sffjunkie+code@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
    "aiohttp>=3.13.4",
    "cairocffi>=1.7.1",
    "dbus-fast>=4.0.0",
    "iwlib>=1.7.0",
    "psutil>=7.2.2",
    "pulsectl-asyncio>=1.2.2",
    "python-mpd2>=3.1.1",
    "qtile>=0.34.1",
    "qtile-extras>=0.34.1",
    "pydantic>=2.13.3",
]
license = "Apache-2.0"

[build-system]
requires = ["uv_build>=0.9.13,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
junit_family = "xunit2"
# testpaths = ["tests"]
norecursedirs = [
    ".direnv",
    ".venv",
    ".git",
    ".tox",
    ".cache",
    ".ruff_cache",
    ".pytest_cache",
    ".settings",
    ".vscode",
    "dist",
    "build",
    "docs",
]

[tool.uv]
python-downloads = "never"

[tool.uv.extra-build-dependencies]
xcffib = ["setuptools"]
iwlib = ["setuptools"]
