[project]
name = "lwm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Simon Kennedy", email = "sffjunkie+code@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.4",
    "cairocffi>=1.7.1",
    "dbus-fast>=4.0.0",
    "iwlib>=1.7.0",
    "psutil>=7.2.2",
    "pulsectl-asyncio>=1.2.2",
    "python-mpd2>=3.1.1",
    "qtile>=0.34.1",
    "qtile-extras>=0.34.1",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
]
license = "MIT"

[build-system]
requires = ["uv_build>=0.9.13,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pyright>=1.1.409",
    "pytest>=9.0.2",
    "types-psutil>=7.2.2.20260408",
]

[tool.pyright]
exclude = [
    ".*",
    "**/node_modules",
    "**/__pycache__",
    "**/.devenv",
    "**/.direnv",
    "**/.tox",
    "**/.venv",
    "**/result",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
junit_family = "xunit2"
norecursedirs = [
    ".cache",
    ".direnv",
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".settings",
    ".tox",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "docs",
    "result",
]

# testpaths = ["tests"]
[tool.uv]
python-downloads = "never"

[tool.uv.extra-build-dependencies]
xcffib = ["setuptools"]
iwlib = ["setuptools"]
